# Blackbox-agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
apps/backend/: package.json  tsconfig.json
apps/backend/src/: index.ts
apps/cli/: package.json
apps/cli/witsmith/: .env.example  .gitignore  AGENT_WIT.yaml  README.md  WITSMITH_DEMO_CONTEXT.md  pyproject.toml
apps/cli/witsmith/demo-repo/: .env.example  .gitignore  AGENT_WIT.yaml  README.md  RECENT_NOTES.md  package-lock.json  package.json
apps/cli/witsmith/demo-repo/.cursor/rules/: witsmith-memory.mdc
apps/cli/witsmith/demo-repo/app/: page.tsx
apps/cli/witsmith/demo-repo/app/api/users/: route.ts
apps/cli/witsmith/demo-repo/prisma/: schema.prisma
apps/cli/witsmith/demo-repo/prisma/migrations/: migration_lock.toml
apps/cli/witsmith/demo-repo/prisma/migrations/20250108120042_drop_user_email/: migration.sql
apps/cli/witsmith/demo-repo/tests/: email-column.test.cjs
apps/cli/witsmith/scripts/: smoke_clod.py
apps/cli/witsmith/src/witsmith/: __init__.py  amend_service.py  analyze_service.py  cache_store.py  check_service.py  cli.py  clod.py  config.py  contracts.py  evidence.py  layout.py  llm_check.py  models.py  replay.py  rule_engine.py  scaffold_docs.py  server.py  session.py  wit_file.py
apps/cli/witsmith/src/witsmith/scaffold_templates/: AGENTS.md  DONE.md  __init__.py
apps/core/: API.md
apps/core/prisma/: schema.prisma
apps/core/src/db/: llmCache.ts
apps/frontend/: package.json
apps/frontend/src/: App.tsx  index.css
frontend/: tsconfig.app.json
(+26 files in other folders)
