[project]
name = "witsmith"
version = "0.0.1"
description = "Witsmith — the agent permission system that learns from prompt injections."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # CLōD is OpenAI-compatible (/v1/chat/completions), not Anthropic-native.
    # Their Claude models are reached via this OpenAI client.
    "openai>=1.40.0",
    "fastmcp>=0.4.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
witsmith = "witsmith.cli:main"
witsmith-server = "witsmith.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/witsmith"]

[dependency-groups]
dev = [
    "ruff>=0.6",
]
